<resources>
    <string name="app_name">Bjj scoreboard</string>
    <string name="red_corner">Red</string>
    <string name="blue_corner">Blue</string>
    <string name="default_score">0</string>
    <string name="points4">+4 points</string>
    <string name="points3">+3 points</string>
    <string name="points2">+2 points</string>
    <string name="advantage">advantage</string>
    <string name="reset">reset</string>
    <string name="history">history</string>
    <string name="back">back</string>
    <string name="start">start</string>
    <string name="pause">pause</string>
    <string name="resume">resume</string>
    <string name="default_minutes">05</string>
    <string name="timer_digits_devider">:</string>
    <string name="default_seconds">00</string>
    <string name="no_moves">No points to take back</string>
    <string name="timer_control">Timer control</string>
    <string name="score_control">Score control</string>
    <string name="no_time_error">Set time to at least 1 second</string>
    <string name="app_title">BJJ Scoreboard</string>
    <string name="round_over_notification_message">Round over!</string>
    <string name="title_image_desc">Logo of the app</string>
    <string name="minutes_plus_image_desc">Button to increase round time in minutes</string>
    <string name="minutes_minus_image_desc">Button to decrease round time in minutes</string>
    <string name="seconds_plus_image_desc">Button to increase round time in seconds</string>
    <string name="seconds_minus_image_desc">Button to decrease round time in seconds</string>
    <string name="time_on_finish">00</string>
</resources>
